@@ -3,6 +3,7 @@ Changes in 0.11.7
     of as an extra argument
   * extra config files (specified with --config-file) were ignored if they
     didn't exist; issue an error message now
+  * Added r.ConsoleHelper() for recipes
 
 Changes in 0.11.6
   * branches are created as changesets now instead of as a protocol call
